Cleaned up the code a bit...
Also added the "ABOUT ME", light green header.

--- a/contributors/EdJonez.html
+++ b/contributors/EdJonez.html
@@ -36,6 +36,9 @@
 		.active {
 		    	background-color: #4CAF50;
 		}
+		.about {
+			color: #lightgreen
+		}
 	</style>
 	<body>
 		<ul>
@@ -71,24 +74,34 @@
 			</h3>
 			<h4>
 				Website: <a href="http://169.254.41.148/a/">
-						[Non-public Raspberry Pi server]
+						Non-public Raspberry Pi server
 					</a>
 				<br>
 				Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
-						[user-e]
+						user-e on Scratch
 					</a>
 				<br>
-				<span style="text-decoration: line-through;">YouTube</span>Google+ page:
-				<a href="https://plus.google.com/107507296915460932126">
-						[Edward J]
+				<span style="text-decoration: line-through;">
+					YouTube
+				</span>
+				Google+ page: <a href="https://plus.google.com/107507296915460932126">
+						Edward J - Google+
 					</a>
 				Github: <a href="https://github.com/user-e">
-						[user-e]
+						user-e
 					</a>				
-                                <br>Hello, I identify as Edward.<br>
-I don't know much about Github and revision control systems but I've coded my own website.<br>
-I don't take GCSE Computing (will do A level) but<br>I'm a programmer who's skilled with computers.	
-                        Here to help if I have time with webpage making.
+                                <p><p>
+				<div class="about">
+					ABOUT ME
+				</div>
+				<b>
+				Hello, I identify as Edward.
+				<br>
+				I don't know much about Github and revision control systems but I've coded my own website.
+				<br>
+				I don't take GCSE Computing (will do A level) but<br>I'm a programmer who's skilled with computers.
+				<br>
+                        	Here to help if I have time with webpage making.
 			</h4>
 		</div>
   	</body>
