Update and rename EdJonez.html to user-e.html

--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -70,7 +70,7 @@
 			<h3>
 				All about <span style="padding: 0.2em 0.3em; border: 1px solid #A0C0E0;
 					-webkit-border-radius: 0.3em; -moz-border-radius: 0.3em; border-radius: 0.3em;
-					background: #DCFAE0; font-family: Arial, Helvetica, sans-serif;">EdJonez</span>
+					background: #DCFAE0; font-family: Arial, Helvetica, sans-serif;">user-e</span>
 			</h3>
 			<h4>
 				Website: <a href="http://169.254.41.148/a/">
