--- a/contributors/index.html
+++ b/contributors/index.html
@@ -70,7 +70,7 @@
 			<h4>
 				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <br>
 				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <br>
-				- EdJonez [<a href="https://hydronesiumscratch.github.io/contributors/EdJonez.html">Data</a>] <br>
+				- user-e [<a href="https://hydronesiumscratch.github.io/contributors/user-e.html">Data</a>] <br>
 				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
 			</h4>
 		<center>
