--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -83,8 +83,8 @@
 				<br>
 				<span style="text-decoration: line-through;">
 					YouTube
-				</span>
-				Google+ page: <a href="https://plus.google.com/107507296915460932126">
+                </span> &nbsp
+                Google+ page: <a href="https://plus.google.com/107507296915460932126">
 						Edward J - Google+
 					</a>
 				Github: <a href="https://github.com/user-e">
@@ -99,9 +99,9 @@
 				<br>
 				I don't know much about Github and revision control systems but I've coded my own website.
 				<br>
-				I don't take GCSE Computing (will do A level) but<br>I'm a programmer who's skilled with computers.
+				I don't take GCSE Computing (will do A level) but I am a programmer who's skilled with computers.
 				<br>
-                        	Here to help if I have time with webpage making.
+                        	I'm here to help if I have time with webpage making.
 			</h4>
 		</div>
   	</body>
