--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -39,6 +39,16 @@
 		.about {
 			color: lightgreen
 		}
+        .name {
+        	padding: 0.2em 0.3em;
+            border: 1px solid #A0C0E0;
+            -webkit-border-radius: 0.3em;
+            -moz-border-radius: 0.3em;
+            border-radius: 0.3em;
+            background: #DCFAE0;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #113333
+        }
 	</style>
 	<body>
 		<ul>
@@ -68,9 +78,9 @@
 				<br>Contributors
 			</h1>
 			<h3>
-				All about <span style="padding: 0.2em 0.3em; border: 1px solid #A0C0E0;
-					-webkit-border-radius: 0.3em; -moz-border-radius: 0.3em; border-radius: 0.3em;
-					background: #DCFAE0; font-family: Arial, Helvetica, sans-serif;">user-e</span>
+				All about <span class="name">
+                	user-e
+                </span>
 			</h3>
 			<h4>
 				Website: <a href="http://169.254.41.148/a/">
@@ -99,9 +109,9 @@
 				<br>
 				I don't know much about Github and revision control systems but I've coded my own website.
 				<br>
-				I don't take GCSE Computing (will do A level) but I am a programmer who's skilled with computers.
+				I don't take GCSE Computing (will do A level) but I'm a programmer who's skilled with computers.
 				<br>
-                        	I'm here to help if I have time with webpage making.
+                        	Here to help if I have time with webpage making.
 			</h4>
 		</div>
   	</body>
