--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	   	<title>  
@@ -35,6 +36,19 @@
 		.active {
 		    	background-color: #4CAF50;
 		}
+		.about {
+			color: lightgreen
+		}
+        .name {
+        	padding: 0.2em 0.3em;
+            border: 1px solid #A0C0E0;
+            -webkit-border-radius: 0.3em;
+            -moz-border-radius: 0.3em;
+            border-radius: 0.3em;
+            background: #DCFAE0;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #113333
+        }
 	</style>
 	<body>
 		<ul>
@@ -59,30 +73,37 @@
 				</a>
 			</li>
 		</ul>
-		<center>
+		<div style="text-align: center;">
 			<h1>
-				<br>
-				Contributors
+				<br>Contributors
 			</h1>
 			<h3>
-				All about me, hydronesium
+				All about <span class="name">
+                			hydronesium
+                		</span>
 			</h3>
 			<h4>
 				Website: <a href="https://hydronesiumscratch.github.io">
 						hydronesium - Home
 					</a>
 				<br>
-				Scratch profile: <a href="https://scratch.mit.edu/users/hydronesium/">
+				Scratch profile: <a href="https://scrathc.mit.edu/users/hydronesium/">
 						hydronesium on Scratch
 					</a>
 				<br>
-				YouTube account: <a href="https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw">
-						hydronesium - YouTube
-					</a>
+				YouTube: <a href="https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw">
+					hydronesium - YouTube
+				</a>
 				Github: <a href="https://github.com/hydronesiumScratch">
 						hydronesiumScratch
-					</a>
+					</a>				
+                                <p><p>
+				<div class="about">
+					ABOUT ME
+				</div>
+				<b>
+				NULL
 			</h4>
-		<center>
+		</div>
   	</body>
 </html>
