--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	   	<title>  
@@ -35,6 +36,19 @@
 		.active {
 		    	background-color: #4CAF50;
 		}
+		.about {
+			color: lightgreen
+		}
+        .name {
+        	padding: 0.2em 0.3em;
+            border: 1px solid #A0C0E0;
+            -webkit-border-radius: 0.3em;
+            -moz-border-radius: 0.3em;
+            border-radius: 0.3em;
+            background: #DCFAE0;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #113333
+        }
 	</style>
 	<body>
 		<ul>
@@ -59,13 +73,14 @@
 				</a>
 			</li>
 		</ul>
-		<center>
+		<div style="text-align: center;">
 			<h1>
-				<br>
-				Contributors
+				<br>Contributors
 			</h1>
 			<h3>
-				All about jimbob123x
+				All about <span class="name">
+                			hydronesium
+                		</span>
 			</h3>
 			<h4>
 				Website: <a href="#">
@@ -76,13 +91,19 @@
 						jimbob123x on Scratch
 					</a>
 				<br>
-				YouTube account: <a href="#">
-						[Doesn't exist]
-					</a>
+				YouTube: <a href="#">
+					[Doesn't exist]
+				</a>
 				Github: <a href="https://github.com/jimbob123x">
 						jimbob123x
-					</a>
+					</a>				
+                                <p><p>
+				<div class="about">
+					ABOUT ME
+				</div>
+				<b>
+				NULL
 			</h4>
-		<center>
+		</div>
   	</body>
 </html>
