Fixed character entity reference in user-e.html
&nbsp needs to end in a semicolon (;) to make it the Non-breaking space character entity reference. This might be causing the extra large font sizes on that page.

--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -93,7 +93,7 @@
 				<br>
 				<span style="text-decoration: line-through;">
 					YouTube
-                </span> &nbsp
+                </span> &nbsp;
                 Google+ page: <a href="https://plus.google.com/107507296915460932126">
 						Edward J - Google+
 					</a>
