--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -87,7 +87,7 @@
 						hydronesium - Home
 					</a>
 				<br>
-				Scratch profile: <a href="https://scrathc.mit.edu/users/hydronesium/">
+				Scratch profile: <a href="https://scratch.mit.edu/users/hydronesium/">
 						hydronesium on Scratch
 					</a>
 				<br>
