--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 			background-color: #222222;
 			color: #eeeeee;
 		}
+		iframe {
+			frameborder: 0
+		}
 	</style>
 	<body>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$('#nav-container').load('https://hydronesiumscratch.github.io/src/navbar.html');
-			});
-		</script>
+		<iframe src="https://hydronesiumscratch.github.io/src/navbar.html">iFrame is not supported by your browser.</iframe>
 		<center>
 			<h1>
 				<br>
