--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -79,7 +79,7 @@
 			</h1>
 			<h3>
 				All about <span class="name">
-                			hydronesium
+                			jimbob123x
                 		</span>
 			</h3>
 			<h4>
