--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 			color: #eeeeee;
 		}
 		iframe {
-			frameborder: 0
-			width: 100%
+			
 		}
 	</style>
 	<body>
-		<iframe src="https://hydronesiumscratch.github.io/src/navbar.html">iFrame is not supported by your browser.</iframe>
+		<iframe src="https://hydronesiumscratch.github.io/src/navbar.html" width=100% height=50 frameborder=0>iFrame is not supported by your browser.</iframe>
 		<center>
 			<h1>
 				<br>
