Improved formatting in attempt to solve text size problems.
I tidied up the code to try to solve a problem with oversized text.
Using a comparison/diff between this file and hydronesium.html at http://www.quickdiff.com,
I looked for anything unusual that could be causing the text to appear twice as big as other user pages.

--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -79,8 +79,8 @@
 			</h1>
 			<h3>
 				All about <span class="name">
-                	user-e
-                </span>
+                                        user-e
+                                </span>
 			</h3>
 			<h4>
 				Website: <a href="http://169.254.41.148/a/">
@@ -91,20 +91,17 @@
 						user-e on Scratch
 					</a>
 				<br>
-				<span style="text-decoration: line-through;">
-					YouTube
-                </span> &nbsp;
-                Google+ page: <a href="https://plus.google.com/107507296915460932126">
+				<span style="text-decoration: line-through;">YouTube</span> &nbsp;
+                                Google+ page: <a href="https://plus.google.com/107507296915460932126">
 						Edward J - Google+
-					</a>
+				</a> 
 				Github: <a href="https://github.com/user-e">
 						user-e
 					</a>				
-                                <p><p>
+                                <p></p>
 				<div class="about">
 					ABOUT ME
 				</div>
-				<b>
 				Hello, I identify as Edward.
 				<br>
 				I don't know much about Github and revision control systems but I've coded my own website.
