--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -81,6 +81,7 @@
 				All about <span class="name">
                 			jimbob123x
                 		</span>
+				(inactive)
 			</h3>
 			<h4>
 				Website: <a href="#">
@@ -93,7 +94,8 @@
 				<br>
 				YouTube: <a href="#">
 					[Doesn't exist]
-				</a>
+					</a>
+				<br>
 				Github: <a href="https://github.com/jimbob123x">
 						jimbob123x
 					</a>				
