--- a/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
+++ b/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
@@ -81,6 +81,7 @@
 				All about <span class="name">
                 			TomIsTheBestAtEverything(WhichIncludesDragons)
                 		</span>
+				(inactive)
 			</h3>
 			<h4>
 				Website: <a href="#">
