--- a/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
+++ b/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
@@ -39,16 +39,19 @@
 		.about {
 			color: lightgreen
 		}
-        .name {
-        	padding: 0.2em 0.3em;
-            border: 1px solid #A0C0E0;
-            -webkit-border-radius: 0.3em;
-            -moz-border-radius: 0.3em;
-            border-radius: 0.3em;
-            background: #DCFAE0;
-            font-family: Arial, Helvetica, sans-serif;
-            color: #113333
-        }
+		.name {
+			padding: 0.2em 0.3em;
+			border: 1px solid #A0C0E0;
+			-webkit-border-radius: 0.3em;
+			-moz-border-radius: 0.3em;
+			border-radius: 0.3em;
+			background: #DCFAE0;
+			font-family: Arial, Helvetica, sans-serif;
+			color: #113333
+		}
+		.inactive {
+			color: #ff9999
+		}
 	</style>
 	<body>
 		<ul>
@@ -82,7 +85,9 @@
                 			TomIsTheBestAtEverything(WhichIncludesDragons)
                 		</span>
 				<br>
-				(inactive)
+				<span class="inactive">
+                			(inactive)
+                		</span>
 			</h3>
 			<h4>
 				Website: <a href="#">
