--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 		<center>
 			<h1>
 				<br>
-				Welcome to hydronesium's website
+				hydronesium
 			</h1>
     			<img src="H.png" alt="The hydronesium logo" />
     			<p>
 			<h3>
-				Click a hyperlink above to see other, closely linked, pages.
+				Watch us rock your world with our Scratch design concepts
 			</h3>
 		</center>
 	</body>
