--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="numbertext">
 						1 / 3
 					</div>
-					<img src="H.png" style="width:100%">
+					<img src="H.png" style="width:50%">
 					<div class="text">
 						The hydronesium logo
 					</div>
@@ -162,7 +162,7 @@
 					<div class="numbertext">
 						2 / 3
 					</div>
-					<img src="user-e.png" style="width:100%">
+					<img src="user-e.png" style="width:50%">
 					<div class="text">
 						The user-e logo
 					</div>
@@ -172,7 +172,7 @@
 					<div class="numbertext">
 						3 / 3
 					</div>
-					<img src="Comming soon.jpg" style="width:100%">
+					<img src="Coming soon.jpg" style="width:50%">
 					<div class="text">
 						Caption Three
 					</div>
@@ -205,7 +205,7 @@
 					}
 					slides[slideIndex-1].style.display = "block";  
 					dots[slideIndex-1].className += " active";
-					setTimeout(showSlides, 5000); // Change image every 2 seconds
+					setTimeout(showSlides, 5000); // Change image every 5 seconds
 				}
 			</script>
     			<p>
