--- a/Game/index.html
+++ b/Game/index.html
@@ -14,6 +14,7 @@
 	body {
 		background-color: #222222;
 		color: #eeeeee;
+		font-family: Verdana, sans-serif;
 	}
 	ul {
 		list-style-type: none;
