--- a/QandA/index.html
+++ b/QandA/index.html
@@ -8,7 +8,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
-			font-weight: normal;
+			font-family: Verdana, sans-serif;
 		}
 		ul {
 			list-style-type: none;
