--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -9,6 +9,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
+			font-family: Verdana, sans-serif;
 		}
 		ul {
 			list-style-type: none;
@@ -39,15 +40,15 @@
 		.about {
 			color: lightgreen
 		}
-        .name {
-        	padding: 0.2em 0.3em;
-            border: 1px solid #A0C0E0;
-            -webkit-border-radius: 0.3em;
-            -moz-border-radius: 0.3em;
-            border-radius: 0.3em;
-            background: #DCFAE0;
-            font-family: Arial, Helvetica, sans-serif;
-            color: #113333
+        	.name {
+        		padding: 0.2em 0.3em;
+            		border: 1px solid #A0C0E0;
+            		-webkit-border-radius: 0.3em;
+            		-moz-border-radius: 0.3em;
+            		border-radius: 0.3em;
+            		background: #DCFAE0;
+            		font-family: Arial, Helvetica, sans-serif;
+            		color: #113333
         }
 	</style>
 	<body>
