--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -9,6 +9,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
+			font-family: Verdana, sans-serif;
 		}
 		ul {
 			list-style-type: none;
