--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -22,6 +22,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
+			font-family: Verdana, sans-serif;
 		}
 		ul(.nav) {
 			list-style-type: none;
