--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
 			position: relative;
 			margin: auto;
 		}
+		/* Next & previous buttons */
+		.prev, .next {
+			cursor: pointer;
+			position: absolute;
+			top: 50%;
+			width: auto;
+			padding: 16px;
+			margin-top: -22px;
+			color: white;
+			font-weight: bold;
+			font-size: 18px;
+			transition: 0.6s ease;
+			border-radius: 0 3px 3px 0;
+		}
+
+		/* Position the "next button" to the right */
+		.next {
+			right: 0;
+			border-radius: 3px 0 0 3px;
+		}
+
+		/* On hover, add a black background color with a little bit see-through */
+		.prev:hover, .next:hover {
+			background-color: rgba(0,0,0,0.8);
+		}
 
 		/* Caption text */
 		.text {
@@ -66,7 +91,7 @@
 			padding: 8px 12px;
 			position: absolute;
 			top: 0;
-            left: 25%
+            		left: 25%
 		}
 
 		/* The dots/bullets/indicators */
@@ -176,7 +201,8 @@
 						Caption Three
 					</div>
 				</div>
-
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
 			</div>
 			<br>
 
@@ -205,6 +231,9 @@
 					slides[slideIndex-1].style.display = "block";  
 					dots[slideIndex-1].className += " active";
 					setTimeout(showSlides, 5000); // Change image every 5 seconds
+				}
+				function plusSlides(n) {
+					showSlides(slideIndex += n);
 				}
 			</script>
     			<p>
