--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 					<div class="numbertext">
 						3 / 3
 					</div>
-					<img src="Coming soon.jpg" style="width:50%">
+					<img src="SpiralsAndCircles.png" style="width:50%">
 					<div class="text">
-						Caption Three
+						Just a random pic.
 					</div>
 				</div>
 			</div>
