--- a/3D/index.html
+++ b/3D/index.html
@@ -1,2 +1,7 @@
 <html>
+  &lt;!doctype html&gt;<script src="js/three.min.js"></script><script src="js/OrbitControls.js"></script><script>// <![CDATA[
+    // Our 3D code will go here...
+ 
+ 
+    // ]]></script>
 </html>
