--- a/3D/index.html
+++ b/3D/index.html
@@ -17,12 +17,16 @@
         transition: transform 1s;
       }
       #cube figure {
-        margin: 0;
-        width: 196px;
-        height: 196px;
         display: block;
         position: absolute;
+        width: 196px;
+        height: 196px;
         border: 2px solid black;
+        line-height: 196px;
+        font-size: 120px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
       }
       #cube .front  {
         transform: rotateY(0deg) translateZ(100px);
