--- a/3D/index.html
+++ b/3D/index.html
@@ -96,5 +96,23 @@
         </figure>
       </div>
     </section>
+    <button class="show-front">
+      Show 1
+    </button>
+    <button class="show-back">
+      Show 2
+    </button>
+    <button class="show-right">
+      Show 3
+    </button>
+    <button class="show-left">
+      Show 4
+    </button>
+    <button class="show-top">
+      Show 5
+    </button>
+    <button class="show-bottom">
+      Show 6
+    </button>
   </body>
 <html>
