--- a/3D/index.html
+++ b/3D/index.html
@@ -18,7 +18,7 @@
       }
       #cube figure {
         display: block;
-        position: absolute;
+        position: relative;
         width: 196px;
         height: 196px;
         border: 2px solid black;
