--- a/3D/index.html
+++ b/3D/index.html
@@ -11,14 +11,14 @@
       #cube {
         width: 100%;
         height: 100%;
-        position: absolute;
+        position: relatve;
         transform-style: preserve-3d;
         transform: translateZ(-100px);
         transition: transform 1s;
       }
       #cube figure {
         display: block;
-        position: relative;
+        position: absolute;
         width: 196px;
         height: 196px;
         border: 2px solid black;
