--- a/3D/index.html
+++ b/3D/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
+   <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+      <title>
+        3D game made with BabylonJS
+      </title>
+      <style>
+        html, body {
+          overflow: hidden;
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+        }
+
+        #renderCanvas {
+          width: 100%;
+          height: 100%;
+          touch-action: none;
+        }
+      </style>
+      <script src="babylon.custom.js"></script>
+      <script src="hand.js"></script>
+   </head>
+
+   <body>
+   </body>
+
+</html>
