--- a/3D/index.html
+++ b/3D/index.html
@@ -26,6 +26,13 @@
    </head>
 
    <body>
+      <canvas id="renderCanvas"></canvas>
+      <script>
+         // Get the canvas element from our HTML above
+         var canvas = document.getElementById("renderCanvas");
+         
+         // Load the BABYLON 3D engine
+         var engine = new BABYLON.Engine(canvas, true);
    </body>
 
 </html>
