--- a/MyCraft/index.html
+++ b/MyCraft/index.html
@@ -1,1 +1,1 @@
-<script src=https://phosphorus.github.io/app.html?id=176294803&turbo=false&full-screen=true></script>
+<iframe src="https://phosphorus.github.io/app.html?id=176294803&turbo=false&full-screen=true"></iframe>
