--- a/MyCraft/index.html
+++ b/MyCraft/index.html
@@ -1,2 +1,17 @@
-<iframe src="https://phosphorus.github.io/app.html?id=176294803&turbo=false&full-screen=true">
-</iframe>
+<style>
+  iframe {
+    width: 100%;
+    height: 100%
+  }
+</style>
+<html>
+  <head>
+    <title>
+      MyCraft
+    </title>
+  </head>
+  <body>
+    <iframe src="https://phosphorus.github.io/app.html?id=176294803&turbo=false&full-screen=true">
+    </iframe>
+  </body>
+</html>
