--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -1,8 +1,10 @@
 <style>
   .3d {
-    
+    perspective: 600px;
+    rotateY(30);
   }
 </style>
+
 <html>
   <head>
     <title>
@@ -12,6 +14,13 @@
   <body>
     <center>
       <div class=3d>
+        <b>
+          Data
+        </b>
+        <p>
+        What is binary?<br>
+        Binary is needed to represent data and program instructions because<br>
+        of the way in which computers work.
       </div>
     </center>
   </body>
