Check for errors and convert to HTML5 for 2nd edit
I've checked this file for errors then converted it to HTML5 based on
differences between it and my own contributor page (using http://www.quickdiff.com),
ready to add some of my own code in the next edit.

--- a/contributors/index.html
+++ b/contributors/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	   	<title>  
@@ -60,7 +61,7 @@
 				</a>
 			</li>
 		</ul>
-		<center>
+		<div style="text-align: center;">
 			<h1>
 				<br>
 				Contributors
@@ -74,6 +75,6 @@
 				- user-e [<a href="https://hydronesiumscratch.github.io/contributors/user-e.html">Data</a>] <br>
 				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
 			</h4>
-		<center>
+		</div>
   	</body>
 </html>
