Fix indentation (tab spacing) and some small fixes
I fixed a problem with incorrect indentation (amount of spacing with tabs) which
made "a </div> closing tag without an element to end." even more obvious
(https://github.com/hydronesiumScratch/hydronesiumscratch.github.io/pull/2#issuecomment-328292261).
Then other small improvements, some from differences between the
contributors index page and it (using http://www.quickdiff.com).

--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -38,7 +38,7 @@
 		    	background-color: #4CAF50;
 		}
 		.about {
-			color: lightgreen
+			color: lightgreen;
 		}
         	.name {
         		padding: 0.2em 0.3em;
@@ -48,73 +48,64 @@
 			border-radius: 0.3em;
 			background: #DCFAE0;
 			font-family: Arial, Helvetica, sans-serif;
-			color: #113333
-        	}
-		</style>
-		<body>
-			<ul>
-				<li>
-					<a href="https://hydronesiumscratch.github.io/">
-						Home
-					</a>
-				</li>
-				<li>
-					<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
-						Contributors
-					</a>
-				</li>
-				<li>
-					<a href="https://hydronesiumscratch.github.io/hydredu/">
-						hydreducation
-					</a>
-				</li>
-				<li>
-					<a href="https://hydronesiumscratch.github.io/Game/">
-						Flappy square
-					</a>
-				</li>
-			</ul>
-			<div style="text-align: center;">
-				<h1>
-					<br>Contributors
-				</h1>
-				<h3>
-					All about <span class="name">
-                                        	user-e
-                                	</span>
-				</h3>
-				<h4>
-					Website: <a href="http://169.254.41.148/a/">
-							Non-public Raspberry Pi server
-						</a>
-					<br>
-					Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
-							user-e on Scratch
-						</a>
-					<br>
-					<span style="text-decoration: line-through;">YouTube</span> &nbsp;
-					Google+ page: <a href="https://plus.google.com/107507296915460932126">
-							Edward J - Google+
-						</a>
-					<br>
-					Github: <a href="https://github.com/user-e">
-							user-e
-						</a>				
-					<p></p>
-					<div class="about">
-						ABOUT ME
-					</div>
-				</h4>
-			</div>
+			color: #113333;
+                }
+	</style>
+	<body>
+		<ul>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/">
+					Home
+				</a>
+			</li>
+			<li>
+				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
+					Contributors
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/hydredu/">
+					hydreducation
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/Game/">
+					Flappy square
+				</a>
+			</li>
+		</ul>
+		<div style="text-align: center;">
+			<h1>
+				<br>Contributors
+			</h1>
+			<h3>
+				All about <span class="name">user-e</span>
+			</h3>
 			<h4>
-				Hello, I identify as Edward.
-				<br>
-				I don't know much about Github and revision control systems but I've coded my own website.
-				<br>
-				I don't take GCSE Computing (will do A level) but I'm a programmer who's skilled with computers.
-				<br>
-                        	Here to help if I have time with webpage making.
+				Website: <a href="http://169.254.41.148/a/">
+					Non-public Raspberry Pi server
+				</a><br>
+				Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
+				user-e on Scratch
+				</a><br>
+				<span style="text-decoration: line-through;">YouTube</span> &nbsp;
+				Google+ page: <a href="https://plus.google.com/107507296915460932126">
+					Edward J - Google+
+				</a><br>
+				Github: <a href="https://github.com/user-e">
+						user-e
+				</a>
+				<div class="about">ABOUT ME</div>
 			</h4>
 		</div>
+		<h4>
+			Hello, I identify as Edward.
+			<br>
+			I don't know much about Github and revision control systems but I've coded my own website.
+			<br>
+			I don't take GCSE Computing (will do A level) but I'm a programmer who's skilled with computers.
+			<br>
+                       	Here to help when I have time with webpage making.
+		</h4>
   	</body>
 </html>
