One more fix after sorting wrong tab spacing
A final small problem fix that I forgot to include in either of the last two edits.
In the previous "three small fixes" edit, I tried to replace the space created by
a <p> element that wasn't closed correctly with a <br> line break but I put it in the wrong place.

--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -94,8 +94,10 @@
 				</a><br>
 				Github: <a href="https://github.com/user-e">
 						user-e
-				</a><br>
-				<div class="about">ABOUT ME</div>
+				</a>
+				<div class="about"><br>
+					ABOUT ME
+				</div>
 			</h4>
 		</div>
 		<h4>
