--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>
-			hydronesium - Home
+			Magnogen - Home
 		</title>
 	</head>
 	<style>
@@ -36,182 +36,36 @@
     		.home {
         		background-color: #4CAF50;
     		}
-		* {box-sizing:border-box}
-		.mySlides {
-			display:none
-		}
-
-		/* Slideshow container */
-		.slideshow-container {
-			max-width: 1000px;
-			position: relative;
-			margin: auto;
-		}
-
-		/* Caption text */
-		.text {
-			color: #f2f2f2;
-			font-size: 15px;
-			padding: 8px 12px;
-			position: absolute;
-			bottom: 8px;
-			width: 100%;
-			text-align: center;
-		}
-
-		/* Number text (1/3 etc) */
-		.numbertext {
-			color: #f2f2f2;
-			font-size: 12px;
-			padding: 8px 12px;
-			position: absolute;
-			top: 0;
-            		left: 25%
-		}
-
-		/* The dots/bullets/indicators */
-		.dot {
-			height: 13px;
-			width: 13px;
-			margin: 0 2px;
-			background-color: #bbb;
-			border-radius: 50%;
-			display: inline-block;
-			transition: background-color 0.6s ease;
-		}
-
 		.active {
 			background-color: #717171;
-		}
-
-		/* Fading animation */
-		.fade {
-			-webkit-animation-name: fade;
-			-webkit-animation-duration: 1.5s;
-			animation-name: fade;
-			animation-duration: 1.5s;
-		}
-
-		@-webkit-keyframes fade {
-			from {
-				opacity: .4
-			} 
-			to {
-				opacity: 1
-			}
-		}
-
-		@keyframes fade {
-			from {
-				opacity: .4
-			} 
-			to {
-				opacity: 1
-			}
-		}
-
-		/* On smaller screens, decrease text size */
-		@media only screen and (max-width: 300px) {
-			.text {
-				font-size: 11px
-			}
 		}
 	</style>
 	<body>
 		<ul>
 			<li>
-				<a class="home" href="https://hydronesiumscratch.github.io/">
+				<a class="home" href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a class="contrib" href="https://hydronesiumscratch.github.io/contributors/">
+				<a class="contrib" href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
 			<li>
-				<a class="hydredu" href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-			<li>
-				<a class="game" href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
+				<a class="edu" href="https://magnogen.github.io/hydredu/">
+					Education
 				</a>
 			</li>
 		</ul>
 		<center>
 			<h1>
 				<br>
-				hydronesium
+				Magnogen / hydronesium
 			</h1>
-			<div class="slideshow-container">
-
-				<div class="mySlides fade">
-					<div class="numbertext">
-						1 / 3
-					</div>
-					<img src="H.png" style="width:50%">
-					<div class="text">
-						The hydronesium logo
-					</div>
-				</div>
-
-				<div class="mySlides fade">
-					<div class="numbertext">
-						2 / 3
-					</div>
-					<img src="user-e.png" style="width:50%">
-					<div class="text">
-						The user-e logo
-					</div>
-				</div>
-
-				<div class="mySlides fade">
-					<div class="numbertext">
-						3 / 3
-					</div>
-					<img src="SpiralsAndCircles.png" style="width:50%">
-					<div class="text">
-						Just a random pic.
-					</div>
-				</div>
-			</div>
-			<br>
-
-			<div style="text-align:center">
-				<span class="dot"></span> 
-				<span class="dot"></span> 
-				<span class="dot"></span> 
-			</div>
-
-			<script>
-				var slideIndex = 0;
-				showSlides();
-
-				function showSlides() {
-					var i;
-					var slides = document.getElementsByClassName("mySlides");
-					var dots = document.getElementsByClassName("dot");
-					for (i = 0; i < slides.length; i++) {
-						slides[i].style.display = "none";  
-					}
-					slideIndex++;
-					if (slideIndex> slides.length) {slideIndex = 1}    
-					for (i = 0; i < dots.length; i++) {
-						dots[i].className = dots[i].className.replace(" active", "");
-					}
-					slides[slideIndex-1].style.display = "block";  
-					dots[slideIndex-1].className += " active";
-					setTimeout(showSlides, 5000); // Change image every 5 seconds
-				}
-				function plusSlides(n) {
-					showSlides(slideIndex += n);
-				}
-			</script>
     			<p>
 			<h3>
-				Watch us rock your world with our Scratch design concepts
+				Provideing cool stuf since we lerned how to spell.
 			</h3>
 		</center>
 	</body>
