--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>
 			Magnogen - Home
 		</title>
+		<link rel="icon" href="http://magnogen.github.io/h.png">
 	</head>
 	<style>
 		body {
@@ -53,7 +54,7 @@
 				</a>
 			</li>
 			<li>
-				<a class="edu" href="https://magnogen.github.io/hydredu/">
+				<a class="edu" href="https://magnogen.github.io/edu/">
 					Education
 				</a>
 			</li>
