--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>
 			Magnogen - Home
 		</title>
-		<link rel="icon" href="http://magnogen.github.io/h.png">
+		<link rel="icon" href="http://magnogen.github.io/H.png">
 	</head>
 	<style>
 		body {
