--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         		background-color: #111111;
     		}
     		.home {
-        		background-color: #4CAF50;
+        		background-color: #4C50AF;
     		}
 		.active {
 			background-color: #717171;
