--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
 	</head>
-	<script src="https://magnogen.github.io/src/style/css"></script>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
 			<li>
