--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
 	</head>
+	<style>
+		body {
+  			background-color: #222222;
+  			color: #eeeeee;
+  			font-family: Verdana, sans-serif;
+		}
+	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
