--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<style>
 		body {
   			background-color: #222222;
-  			color: #eeeeee;
+  			color: #EEEEEE;
   			font-family: Verdana, sans-serif;
+		}
+		.home {
+			background-color: #0000AB
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
