--- a/contributors/index.html
+++ b/contributors/index.html
@@ -6,37 +6,15 @@
 	</head>
 	<style>
 		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
-		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
+  			background-color: #222222;
+  			color: #EEEEEE;
+  			font-family: Verdana, sans-serif;
 		}
 		.active {
-		    	background-color: #4CAF50;
+			background-color: #0000AB
 		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
 			<li>
