--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   			color: #EEEEEE;
   			font-family: Verdana, sans-serif;
 		}
-		.home {
+		.active {
 			background-color: #0000AB
 		}
 	</style>
@@ -19,17 +19,17 @@
 	<body>
 		<ul>
 			<li>
-				<a class="home" href="https://magnogen.github.io/">
+				<a class="active" href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a class="contrib" href="https://magnogen.github.io/contributors/">
+				<a href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
 			<li>
-				<a class="edu" href="https://magnogen.github.io/edu/">
+				<a href="https://magnogen.github.io/edu/">
 					Education
 				</a>
 			</li>
