--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   			font-family: Verdana, sans-serif;
 		}
 		.active {
-			background-color: #0000AB
+			background-color: #0000FF
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
