--- a/contributors/index.html
+++ b/contributors/index.html
@@ -18,23 +18,18 @@
 	<body>
 		<ul>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/">
+				<a href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
+				<a class="active" href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
+				<a href="https://magnogen.github.io/edu/">
+					Education
 				</a>
 			</li>
 		</ul>
@@ -47,10 +42,10 @@
 				Here is the list of people who contributed to this website:
 			</h3>
 			<h4>
-				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <br>
-				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <br>
-				- user-e [<a href="https://hydronesiumscratch.github.io/contributors/user-e.html">Data</a>] <br>
-				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
+				- hydronesium [<a href="https://magnogen.github.io/contributors/hydronesium.html">Data</a>] <br>
+				- jimbob123x [<a href="https://magnogen.github.io/contributors/jimbob123x.html">Data</a>] <br>
+				- user-e [<a href="https://magnogen.github.io/contributors/user-e.html">Data</a>] <br>
+				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://magnogen.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
 			</h4>
 		<center>
   	</body>
