Update and rename hydredu/index.html to edu/index.html

--- a/edu/index.html
+++ b/edu/index.html
@@ -50,29 +50,24 @@
 	<body>
 		<ul>
   			<li>
-				<a href="https://hydronesiumscratch.github.io/">
+				<a href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
+				<a href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
   			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
+				<a class="active" href="https://magnogen.github.io/edu/">
+					Education
 				</a>
 			</li>
 		</ul>
 		<ul class="sub">
   			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/">
+				<a href="https://magnogen.github.io/hydredu/Bio/">
 					Biology
 				</a>
 			</li>
@@ -80,7 +75,7 @@
 
 		<center>
 				<h1>
-					hydreducation - hydronesium education
+					Education
 				</h1>
 				<h3>
 					Click a hyperlink above to see other, closely linked, pages.
