Checked folder deletions, a username change, CSS code move, updated contributors index page. (#8)
Update my repository fork for mainly small changes, apart from changing his username which has many uses in 13 files that needed changing.  
Also, he has finally organized the large page design CSS code into a linked external stylesheet.  
Other small changes - 30 commits, 32,012 deletions and 61 additions:  
• Top-level folders "3D", "Game", "MyKraft", "TagIt", "lucidulus" deleted or most files removed.  
• Edits for username change, CSS code move, small improvements to "README.md", "CompSci/index.html", "index.html", "hydredu/index.html" (moved to edu/index.html).  
• Username and CSS changes to "contributors/index.html"
- need to use the new version when making my planned changes that I'm doing on my fork.

Original details:
* Create CNAME

* Delete CNAME

* Delete babylon.custom.js

* Delete index.html

* Delete tutorial.txt

* Delete index.html

* Delete index.html

* Delete index.html

* Delete index.html

* Update index.html

* Update index.html

* Update README.md

* Update index.html

* Update README.md

* Update index.html

* Update index.html

* Update README.md

* Update index.html

* Create style.css

* Update index.html

* Update index.html

* Update style.css

* Update index.html

* Update style.css

* Update index.html

* Update index.html

* Update index.html

* Update index.html

* Update index.html

* Update and rename hydredu/index.html to edu/index.html

--- a/contributors/index.html
+++ b/contributors/index.html
@@ -7,57 +7,30 @@
 	</head>
 	<style>
 		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
-		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
+  			background-color: #222222;
+  			color: #EEEEEE;
+  			font-family: Verdana, sans-serif;
 		}
 		.active {
-		    	background-color: #4CAF50;
+			background-color: #0000AB
 		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/">
+				<a href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
+				<a class="active" href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
+				<a href="https://magnogen.github.io/edu/">
+					Education
 				</a>
 			</li>
 		</ul>
@@ -70,10 +43,10 @@
 				Here is the list of people who contributed to this website:
 			</h3>
 			<h4>
-				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <br>
-				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <br>
-				- user-e [<a href="https://hydronesiumscratch.github.io/contributors/user-e.html">Data</a>] <br>
-				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
+				- hydronesium [<a href="https://magnogen.github.io/contributors/hydronesium.html">Data</a>] <br>
+				- jimbob123x [<a href="https://magnogen.github.io/contributors/jimbob123x.html">Data</a>] <br>
+				- user-e [<a href="https://magnogen.github.io/contributors/user-e.html">Data</a>] <br>
+				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://magnogen.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
 			</h4>
 		</div>
   	</body>
