--- a/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
+++ b/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
@@ -11,32 +11,6 @@
 			color: #eeeeee;
 			font-family: Verdana, sans-serif;
 		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
 		.about {
 			color: lightgreen
 		}
@@ -50,10 +24,8 @@
 			font-family: Arial, Helvetica, sans-serif;
 			color: #113333
 		}
-		.inactive {
-			color: #ff9999
-		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
 			<li>
@@ -69,11 +41,6 @@
 			<li>
 				<a href="https://hydronesiumscratch.github.io/hydredu/">
 					hydreducation
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
 				</a>
 			</li>
 		</ul>
