--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -11,66 +11,36 @@
 			color: #eeeeee;
 			font-family: Verdana, sans-serif;
 		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
 		.about {
 			color: lightgreen
 		}
-        	.name {
-        		padding: 0.2em 0.3em;
-            		border: 1px solid #A0C0E0;
-            		-webkit-border-radius: 0.3em;
-            		-moz-border-radius: 0.3em;
-            		border-radius: 0.3em;
-            		background: #DCFAE0;
-            		font-family: Arial, Helvetica, sans-serif;
-            		color: #113333
-        }
+		.name {
+			padding: 0.2em 0.3em;
+			border: 1px solid #A0C0E0;
+			-webkit-border-radius: 0.3em;
+			-moz-border-radius: 0.3em;
+			border-radius: 0.3em;
+			background: #DCFAE0;
+			font-family: Arial, Helvetica, sans-serif;
+			color: #113333
+		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/">
+				<a href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
+				<a class="active" href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
+				<a href="https://magnogen.github.io/hydredu/">
 					hydreducation
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
 				</a>
 			</li>
 		</ul>
