--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -3,7 +3,16 @@
     perspective: 600px;
     rotateY(30);
   }
+	body {
+  		background-color: #222222;
+  		color: #EEEEEE;
+  		font-family: Verdana, sans-serif;
+	}
+	.active {
+		background-color: #0033cc
+	}
 </style>
+<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 
 <html>
   <head>
